--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -1,21 +1,54 @@
 {% extends "base.html" %}
 
-{% block content %}
-<section class="section">
-    <div class="container">
-        <div class="has-text-centered">
-            <h1 class="title is-3">{{ section.title }}</h1>
-            <p class="subtitle is-4">{{ section.description }}</p>
-            {% if config.extra.author.avatar %}
-            <figure class="image is-flex is-justify-content-center is-align-items-left">
-                <img class="is-rounded" src="{{ config.extra.author.avatar }}" style="max-width: 192px" />
+{% block index %}
+<div class="columns">
+    <div class="column is-two-thirds">
+        <section class="section">
+            <figure class="image is-flex is-justify-content-center">
+                <img class="is-rounded" src="images/main.jpg" style="max-width: 192px" />
             </figure>
-            {% endif %}
-            {{ macros:: social_links( social_config=config.extra.social) }}
-        </div>
-        <div class="content">
-            {{ section.content | safe }}
-        </div>
+            <div class="content is-medium is-justify-content-right">
+                <p class="title is-1">{{
+                    section.title }}</p>
+                <p class="subtitle is-3">{{
+                    section.description }}</p>
+                <div class="box">
+                    <div class="columns pt-4">
+                        <div class="column">
+                            <figure class="image">
+                                <img src="images/787c9181-d788-4f07-9f24-42881e3e8a57.jfif">
+                            </figure>
+                        </div>
+                        <div class="column">
+                            <figure class="image">
+                                <img src="images/main.jpg">
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-</section>
+    <div class="column">
+        <form class="box mt-9">
+            <div class="field">
+                <label class="label">Email</label>
+                <div class="control">
+                    <input class="input is-danger" type="email" placeholder="ej. juan@hotmail.com">
+                </div>
+            </div>
+            <button class="button is-danger">Suscribirse</button>
+        </form>
+        <div class="box">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-dark">
+                    <figure class="image is-1by2">
+                        <img src="images/victorino.JPG">
+                    </figure>
+                </article>
+            </div>
+        </div>
+        </h2>
+    </div>
+</div>
 {% endblock %}
