--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -1,36 +1,49 @@
 {% extends "base.html" %}
 
-{% block index %}
+{% block content %}
 <div class="columns">
     <div class="column is-two-thirds">
         <section class="section">
-            <figure class="image is-flex is-justify-content-center">
-                <img class="is-rounded" src="images/main.jpg" style="max-width: 192px" />
-            </figure>
-            <div class="content is-medium is-justify-content-right">
-                <p class="title is-1">{{
-                    section.title }}</p>
-                <p class="subtitle is-3">{{
-                    section.description }}</p>
-                <div class="box">
-                    <div class="columns pt-4">
-                        <div class="column">
+            <div class="box">
+                <div id="main_title" class="content">
+                    <p class="title is-1">{{
+                        section.title }}</p>
+                    <p class="subtitle is-3">{{
+                        section.description }}</p>
+                </div>
+            </div>
+            <div>
+                <div class="columns">
+                    <div class="column">
+                        <div class="box has-background-danger">
                             <figure class="image">
-                                <img src="images/787c9181-d788-4f07-9f24-42881e3e8a57.jfif">
-                            </figure>
-                        </div>
-                        <div class="column">
-                            <figure class="image">
-                                <img src="images/main.jpg">
+                                <img src="images/marcha.jfif">
                             </figure>
                         </div>
                     </div>
+                    <div class="column mgt-large">
+                        <div class="box">
+                            <figure class="image">
+                                <img src="images/Cem_murosdelpueblo_210830_448g.JPG">
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <figure class="image is-5by4">
+                        <img src="images/victorino_marcha.jpg">
+                    </figure>
                 </div>
             </div>
         </section>
     </div>
     <div class="column">
-        <form class="box mt-9">
+        <div class="section">
+            <figure class="image is-flex is-justify-content-center">
+                <img class="is-rounded" src="images/main.jpg" style="max-width: 192px" />
+            </figure>
+        </div>
+        <form class="box ">
             <div class="field">
                 <label class="label">Email</label>
                 <div class="control">
@@ -39,13 +52,21 @@
             </div>
             <button class="button is-danger">Suscribirse</button>
         </form>
-        <div class="box">
-            <div class="tile is-parent">
-                <article class="tile is-child notification is-dark">
-                    <figure class="image is-1by2">
-                        <img src="images/victorino.JPG">
-                    </figure>
-                </article>
+        <div class="box has-background-black">
+            <figure class="image is-1by2">
+                <img src="images/radio.jpg">
+            </figure>
+        </div>
+        <div class="content">
+            <div class="box">
+                <div class="tile is-parent">
+                    <dl>
+                        {% for page in section.pages %}
+                        <dt>{{ macros::page_publish_metadata(page=page) }}</dt>
+                        <dd>{{page.title}}</dd>
+                        {% endfor %}
+                    </dl>
+                </div>
             </div>
         </div>
         </h2>
