--- a/ningunx-presx-por-luchar/templates/section.html
+++ b/ningunx-presx-por-luchar/templates/section.html
@@ -23,7 +23,7 @@
         {% endif %}
 
         {% for page in pages %}
-        <article class="box">
+        <article class="box animate__animated animate__slideInRight">
           <h2 class="title">
             <a class="has-text-dark" href='{{ page.permalink }}'>
               {{ page.title }}
