--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -6,7 +6,7 @@
         <section class="section">
             <div class="box">
                 <div id="main_title" class="content">
-                    <p class="title is-1">{{
+                    <p class="title is-1 has-text-centered">{{
                         section.title }}</p>
                     <div class="block">
                         <h3 class="subtitle is-4">{{
@@ -27,14 +27,14 @@
                     <div class="column mgt-large ">
                         <div class="box">
                             <figure class="image">
-                                <img src="images/Cem_murosdelpueblo_210830_448g.JPG">
+                                <img src="images/victorino_marcha.jpg">
                             </figure>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <figure class="image is-5by4">
-                        <img src="images/victorino_marcha.jpg">
+                        <img src="images/Cem_murosdelpueblo_210830_448g.JPG">
                     </figure>
                 </div>
             </div>
@@ -60,16 +60,28 @@
                 <img src="images/radio.jpg">
             </figure>
         </div>
-        <div class="content">
-            <div class="box">
-                <div class="tile is-parent">
-                    <dl>
-                        {% for page in section.pages %}
-                        <dt>{{ macros::page_publish_metadata(page=page) }}</dt>
-                        <dd>{{page.title}}</dd>
-                        {% endfor %}
-                    </dl>
-                </div>
+        <div class="box">
+            <div class="content">
+                {% set url = get_url(path="@/posts/_index.md") %}
+                <a href="{{url}}">
+                    <h1 class="title is-2 has-text-centered">
+                        <span class="icon">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                        </span>
+                        Ir a Publicaciones
+                    </h1>
+                    {% set section = get_section(path="posts/_index.md") %}
+                    {% for page in section.pages %}
+                    <article class="message is-dark">
+                        <div class="message-header">
+                            <p>{{page.title}}</p>
+                        </div>
+                        <div class="message-body">
+                            {{ macros::page_publish_metadata(page=page) }}
+                        </div>
+                    </article>
+                    {% endfor %}
+                </a>
             </div>
         </div>
         </h2>
