--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -27,7 +27,7 @@
                     <div class="column mgt-large ">
                         <div class="box">
                             <figure class="image">
-                                <img src="images/victorino_marcha.jpg">
+                                <img src="images/victorino_marcha.JPG">
                             </figure>
                         </div>
                     </div>
