--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="box has-background-black">
             <figure class="image is-1by2">
-                <img src="{{get_url(path='images/radio.jpg')}}">
+                <img src="{{get_url(path='images/radio.JPG')}}">
             </figure>
         </div>
     </div>
