--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -43,7 +43,7 @@
     <div class="column animate__animated animate__slideInRight">
         <div class="section">
             <figure class="image is-flex is-justify-content-center">
-                <img class="is-rounded" src="images/main.jpg" style="max-width: 192px" />
+                <img class="is-rounded" src="images/main.JPG" style="max-width: 192px" />
             </figure>
         </div>
         <form class="box ">
