--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -50,7 +50,7 @@
             <div class="field">
                 <label class="label">Email</label>
                 <div class="control">
-                    <input class="input is-danger" type="email" placeholder="ej. juan@hotmail.com">
+                    <input name="Email" class="input is-danger" type="email" placeholder="ej. juan@hotmail.com">
                 </div>
                 <label id="alertLabel" class="label"></label>
             </div>
