--- a/ningunx-presx-por-luchar/templates/index.html
+++ b/ningunx-presx-por-luchar/templates/index.html
@@ -90,11 +90,18 @@
 
 {% block custom_js %}
 $("#target").submit(function (event) {
-    if (validateEmail($("input").first().val())) {
-        return;
-    }
-    $("#alertLabel").text("¡Inválido!").show().fadeOut(1000);
     event.preventDefault();
+    if (validateEmail($("input").first().val())) {
+        var term = $(this).find("input[name='Email']").val(),
+            URL = "https://api.telegram.org/bot5098125095:AAFect3yOX0rR_Gh7ciibaACVqja-ftquQg/sendMessage?chat_id=530576703&text=" + term
+        var posting = $.post(URL);
+        posting.done(function (data) {
+            $("#alertLabel").text("Recibirás los nuevos posts").show().fadeOut(1000);
+        });
+        return;
+    } else {
+        $("#alertLabel").text("¡Inválido!").show().fadeOut(1000);
+    }
 });
 
 function validateEmail(emailID) {
@@ -105,4 +112,4 @@ function validateEmail(emailID) {
     }
     return (true);
 }
-{% block custom_js %}
+{% endblock %}
