--- a/ningunx-presx-por-luchar/templates/base.html
+++ b/ningunx-presx-por-luchar/templates/base.html
@@ -85,10 +85,10 @@
             </span>
         </div>
     </footer>
-    {% block custom_js %}
-    {% endblock %}
-    {% block user_custom_js %}
-    {% endblock %}
+    <script>
+        {% block custom_js %}
+        {% endblock %}
+    </script>
 </body>
 
 </html>
