--- a/ningunx-presx-por-luchar/templates/base.html
+++ b/ningunx-presx-por-luchar/templates/base.html
@@ -44,7 +44,7 @@
                     <div class="navbar-end has-text-centered">
                         {% for item in config.extra.navbar_items %}
                         {% for nav in item.nav_items %}
-                        <a class="navbar-item"
+                        <a class="navbar-item has-text-white"
                             href="{{ nav.url | replace(from='$BASE_URL', to=config.base_url) }}">
                             {{ nav.name }}
                         </a>
