--- a/ningunx-presx-por-luchar/sass/style.sass
+++ b/ningunx-presx-por-luchar/sass/style.sass
@@ -19,4 +19,7 @@ body
     flex-direction: column;
     min-height: 100vh;
  
+#navButton:hover
+    color: #000000 !important;
+
 @import '../bulma/bulma'
