--- a/ningunx-presx-por-luchar/sass/style.sass
+++ b/ningunx-presx-por-luchar/sass/style.sass
@@ -21,5 +21,7 @@ body
  
 #navButton:hover
     color: #000000 !important;
+#navButton:focus
+    color: #000000 !important;
 
 @import '../bulma/bulma'
