--- a/ningunx-presx-por-luchar/sass/style.sass
+++ b/ningunx-presx-por-luchar/sass/style.sass
@@ -23,5 +23,10 @@ body
     color: #000000 !important;
 #navButton:focus
     color: #000000 !important;
+    
+.fixed
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 
 @import '../bulma/bulma'
