--- a/ningunx-presx-por-luchar/templates/base.html
+++ b/ningunx-presx-por-luchar/templates/base.html
@@ -38,13 +38,6 @@
                                 <img src="{{config.base_url}}/images/icon.jfif">
                             </figure>
                         </div>
-                    </a>
-                    <a aria-expanded="false" aria-label="menu" class="navbar-burger burger" data-target="navMenu"
-                        role="button">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                    </a>
                 </div>
                 <div class="navbar-menu" id="navMenu">
                     <div class="navbar-end has-text-centered">
@@ -56,6 +49,11 @@
                         </a>
                         {% endfor %}
                         {% endfor %}
+                        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                          </a>
                     </div>
                 </div>
         </nav>
