--- a/ningunx-presx-por-luchar/templates/base.html
+++ b/ningunx-presx-por-luchar/templates/base.html
@@ -92,7 +92,7 @@
             $(".navbar-burger").click(function () {
                 $(".navbar-burger").toggleClass("is-active");
                 $(".navbar-menu").toggleClass("is-active");
-                //$(".navButton").toggleClass("navButton");
+                $(".navButton").toggleClass("navButton");
             });
         });
     </script>
