--- a/ningunx-presx-por-luchar/templates/base.html
+++ b/ningunx-presx-por-luchar/templates/base.html
@@ -16,7 +16,6 @@
     <link href='/icons/apple-touch-icon.png' rel="apple-touch-icon" sizes="180x180" />
     <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" />
     <link href="{{ get_url(path='style.css') | safe }}" rel="stylesheet" type="text/css" />
-    <link href="{{ get_url(path='style.css') | safe }}" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
         integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
@@ -51,7 +50,7 @@
                     <div class="navbar-end is-dark has-text-centered">
                         {% for item in config.extra.navbar_items %}
                         {% for nav in item.nav_items %}
-                        <a class="navbar-item has-text-white navButton"
+                        <a id="navButton" class="navbar-item has-text-white"
                             href="{{ nav.url | replace(from='$BASE_URL', to=config.base_url) }}">
                             {{ nav.name }}
                         </a>
@@ -92,7 +91,9 @@
             $(".navbar-burger").click(function () {
                 $(".navbar-burger").toggleClass("is-active");
                 $(".navbar-menu").toggleClass("is-active");
-                $(".navButton").toggleClass("navButton");
+                $("#navButton").each(function () {
+                    $(this).css('color', '#000000');
+                });
             });
         });
     </script>
