--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -9,7 +9,7 @@
 $red: #D33E8F
 $white: hsl(0, 0%, 100%)
 $black: hsl(0, 0%, 4%)
-$family-sans-serif: "Akkurat Pro", sans-serif
+$family-sans-serif: "Akkurat Pro Bold", sans-serif
 $footer-padding: 1.0rem 2.5rem
 $title-family: "Black Grounds", sans-serif
 $title-color: $red
