--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -9,10 +9,16 @@
 $red: #D33E8F
 $white: hsl(0, 0%, 100%)
 $black: hsl(0, 0%, 4%)
-$family-sans-serif: "Akkurat Pro", sans-serif
-$footer-padding: 1.0rem 2.5rem
-$title-family: "Akkurat Pro Bold", sans-serif
+$footer-padding: 2.0rem 2.5rem
 $title-color: $red
+
+
+// Fuentes
+    // Title
+$family-sans-serif: "Akkurat Pro", sans-serif
+$title-family: "Akkurat Pro Bold", sans-serif
+
+
 
 html
     scroll-behavior: smooth
