--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -5,21 +5,20 @@
 @import 'media.scss'
 @import 'akkurat.scss'
 
-
+// Colors
 $red: #D33E8F
 $white: hsl(0, 0%, 100%)
 $black: hsl(0, 0%, 4%)
+
+// Settings
 $footer-padding: 2.0rem 2.5rem
 $title-color: $red
 
-
-// Fuentes
-    // Title
+// Fonts
 $family-sans-serif: "Akkurat Pro", sans-serif
 $title-family: "Akkurat Pro Bold", sans-serif
 
-
-
+// Spec
 html
     scroll-behavior: smooth
 
