--- a/feria-a-montevideo/templates/index.html
+++ b/feria-a-montevideo/templates/index.html
@@ -23,7 +23,7 @@
                     <div class="column is-centered">
                         <div class="block">
                             <div class="box">
-                                <h3 class="subtitle" style="color: black">{{
+                                <h3 class="subtitle" style="color: black; text-indent: 5px;">{{
                                     section.content | safe }}</h3>
                             </div>
                         </div>
