--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -35,4 +35,9 @@ body
     @include lt-lg
         color: $black !important
 
+#introductionSub
+    color: black
+    text-indent: 20px
+    letter-spacing: 3px
+
 @import '../bulma/bulma'
