--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -35,9 +35,13 @@ body
     @include lt-lg
         color: $black !important
 
-#introductionSub
+.introductionSub
     color: black
-    text-indent: 20px
-    letter-spacing: 3px
+    text-indent: 50px
+    letter-spacing: 2px
+
+#mainTitle
+    font-size: 4rem
+    letter-spacing: -2px
 
 @import '../bulma/bulma'
