--- a/feria-a-montevideo/templates/404.html
+++ b/feria-a-montevideo/templates/404.html
@@ -5,9 +5,9 @@
 <section class="section">
   <div class="container">
     <div class="has-text-centered">
-      <h1 class="title is-2">HTTP 404</h1>
+      <h1 class="title is-2">Oops</h1>
       <p class="subtitle is-4">
-        No existe esta página
+        Aún estamos trabajando en esta pestaña
       </p>
       <p class="my-6">
         <a href='{{ config.base_url }}'>
