--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -69,8 +69,8 @@
             <div class="content">
                 <span class="icon-text mlt-6">
                     <span>
-                        <strong>TRANSFORMA LA INDIGNACIÓN EN LUCHA Y RESISTENCIA</strong>
-                        <span class="icon animate__animated animate__headShake animate__infinite">
+                        <strong>TRANSFORMA LA INDIGNACIÓN EN LUCHA Y RESISTENCIA </strong>
+                        <span class="icon animate__animated animate__headShake animate__infinite" style="margin-left: 10px;">
                             <i class="fas fa-bomb fa-2x"></i>
                         </span>
                     </span>
@@ -78,6 +78,9 @@
             </div>
             <span class="icon-text">
                 <span>
+                    <a href="https://github.com/social-y-directa-es-la-lucha/blog-1.git">
+                        Facebook <i class="fab fa-facebook"></i></span></a>
+                <span> |
                     <a href="https://github.com/social-y-directa-es-la-lucha/blog-1.git">
                         Código libre</span></a>
                 <span class="icon">
