--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -41,7 +41,8 @@ body
     letter-spacing: 2px
 
 #mainTitle
-    font-size: 3.5rem
-    letter-spacing: -5px
+    color: $red
+    font-size: 2rem
+    letter-spacing: -3px
 
 @import '../bulma/bulma'
