--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -38,6 +38,7 @@
                             <!--                                <img src="{{config.base_url}}/images/icon2.png">-->
                             <!--                            </figure>-->
                         </div>
+                        <p class="has-text-centered" id="mainTitle">9° Feria del Libro Anarquista 🏴📖</p>
                         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                             <span aria-hidden="true"></span>
                             <span aria-hidden="true"></span>
